<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/activity_your_interest_llParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C0D3FD"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/your_interest"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/your_interest"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/skip"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/activity_your_interest_question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/drawable_your_interest_textview"
                android:lines="3"
                android:paddingLeft="3dp"
                android:paddingTop="5dp"
                android:text="@string/your_interest_q1"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/activity_your_interest_ans1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/drawable_your_interest_textview"
                android:lines="5"
                android:paddingLeft="3dp"
                android:paddingTop="5dp"
                android:text="@string/your_interest_ans1"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <!-- Question 2 -->

            <View
                android:id="@+id/activity_your_interest_emptyview"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/activity_your_interest_question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/drawable_your_interest_textview"
                android:lines="3"
                android:paddingLeft="3dp"
                android:paddingTop="5dp"
                android:text="@string/your_interest_q2"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/activity_your_interest_ans2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/drawable_your_interest_textview"
                android:lines="5"
                android:paddingLeft="3dp"
                android:paddingTop="5dp"
                android:text="@string/your_interest_ans2"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <!-- Submit Button -->

            <Button
                android:id="@+id/activity_your_interest_btnSubmit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/drawable_your_interest_submit_button"
                android:text="@string/your_interest_submit"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>